<resources>
    <string name="app_name">AdsbMonitor</string>
    <string name="main_label_version">Dump1090 Version:</string>
    <string name="main_label_history">History:</string>
    <string name="main_label_refresh">Refresh:</string>
    <string name="main_label_lat">Lat:</string>
    <string name="main_label_lon">Lon:</string>
    <string name="stat_local_samples_processed">Samples Processed:</string>
    <string name="stat_local_samples_dropped">Samples Dropped:</string>
    <string name="stat_local_modeac">Mode A/C messages decoded:</string>
    <string name="stat_local_modes">Mode S preambles received:</string>
    <string name="stat_local_modes_bad">Bad Mode S preambles:</string>
    <string name="title_activity_aircraft">Aircraft List</string>
    <string name="action_settings">Settings</string>
    <string name="aircraft_total">Aircraft:</string>
    <string name="aircraft_total_with_positions">With Positions:</string>
    <string name="aircraft_mlat">MLAT:</string>
    <string name="aircraft_last_update_label">Last update:</string>
    <string name="prefs_ip_title">IP Address</string>
    <string name="prefs_ip_summary">IP Address for the machine that Dump1090 is running on</string>
</resources>
