<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtStatTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="title" />

    <TextView
        android:id="@+id/txtStatLocalSamplesProcessed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtStatTitle"
        android:text="@string/stat_local_samples_processed" />

    <TextView
        android:id="@+id/txtStatLocalSamplesProcessedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/txtStatLocalSamplesProcessed"
        android:text="value" />

    <TextView
        android:id="@+id/txtStatLocalSamplesDropped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtStatLocalSamplesProcessed"
        android:text="@string/stat_local_samples_dropped" />

    <TextView
        android:id="@+id/txtStatLocalSamplesDroppedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/txtStatLocalSamplesDropped"
        android:text="value" />

    <TextView
        android:id="@+id/txtStatLocalModeac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtStatLocalSamplesDropped"
        android:text="@string/stat_local_modeac" />

    <TextView
        android:id="@+id/txtStatLocalModeacValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/txtStatLocalModeac"
        android:text="value" />

    <TextView
        android:id="@+id/txtStatLocalModes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtStatLocalModeac"
        android:text="@string/stat_local_modes" />

    <TextView
        android:id="@+id/txtStatLocalModesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/txtStatLocalModes"
        android:text="value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_local_modes_bad"
        android:id="@+id/txtStatLocalModesBad"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtStatLocalModes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="value"
        android:id="@+id/txtStatLocalModesBadValue"
        android:layout_below="@+id/txtStatLocalModesValue"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/txtStatLocalModesBad" />
</RelativeLayout>